Copy ui.viewsets.namespace to v3.viewsets.namespace
Move ui.serializers.namespace to v3.serializers.namespace.

Add instance of namespace viewsets to v3 urls.
Add start of /v3/namespaces/ unit tests.

Make ui namespace viewset a subclass of NamespaceViewSet.
Set default queryset as classmethod for NamespaceViewSet

Use one ModelSerializer (NamespaceSerializer) for the namespace viewsets.
Add a v3 GroupSummarySerializer.
Update v3 NamespaceSerializer to used nested serializer for 'groups'.
Add a .create() and .update() for NamespaceSerializer.
Only use existing groups for the namespace groups, don't
create them.

Remove v3 NamespaceSerializer group name validation since
that should be upto group creation viewsets/serializers/models
now. ie (_sanitize_accounts).

Set a ref_name for v3 CollectionVersionSerializer.
This is to avoid a ref_name conflict with the
pulp_ansible CollectionVersionSerializer so that
the openapi schema generation doesn't fail.

Updated openapi.yaml to include /namespaces/

Issue: #180
