# galaxy_ng/app/api/v3/serializers/__init__.py
@@ -3,7 +3,19 @@ from .collection import (
     CollectionUploadSerializer,
 )
 
+from .namespace import (
+    NamespaceSerializer,
+    NamespaceSummarySerializer,
+)
+
+from .group import (
+    GroupSummarySerializer,
+)
+
 __all__ = (
     'CollectionVersionSerializer',
     'CollectionUploadSerializer',
+    'GroupSummarySerializer',
+    'NamespaceSerializer',
+    'NamespaceSummarySerializer',
 )
